objects/hed__Academic_Certification__c.object
<CustomObject>
    <description>Represents an academic certificate, degree, or diploma.</description>
    <label>Academic Certification</label>
    <nameField>
        <label>Academic Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Academic Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>hed__Issuer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the issuing organization of the Academic Certification.</description>
        <inlineHelpText>The issuing organization of the Academic Certification.</inlineHelpText>
        <label>Issuer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Academic Certifications</relationshipLabel>
        <relationshipName>Academic_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Description__c</fullName>
        <description>The description of the Academic Certification.</description>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__Extended_Name__c</fullName>
        <description>The extended name of the Academic Certification.</description>
        <inlineHelpText>The extended name of the Academic Certification.</inlineHelpText>
        <label>Extended Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Academic_Level__c</fullName>
        <description>The grade-level, developmental level, or age-level of the Academic Certification.</description>
        <inlineHelpText>The Academic Level of the Academic Certification. For example, the Academic Certification was obtained in high school.</inlineHelpText>
        <label>Academic Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-K/Preschool</fullName>
                </value>
                <value>
                    <fullName>Elementary</fullName>
                </value>
                <value>
                    <fullName>Middle School</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Doctoral</fullName>
                </value>
                <value>
                    <fullName>Post-Baccalaureate Certificate</fullName>
                </value>
                <value>
                    <fullName>Adult Education</fullName>
                </value>
                <value>
                    <fullName>Professional Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Field_Of_Study__c</fullName>
        <description>The field of study of the Academic Certification.</description>
        <inlineHelpText>The field of study of the Academic Certification.</inlineHelpText>
        <label>Field of Study</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Business, Management, and Marketing</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Computer and Information Sciences</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>English Language, Literature, and Letters</fullName>
                </value>
                <value>
                    <fullName>Family and Consumer Sciences</fullName>
                </value>
                <value>
                    <fullName>Foreign Languages</fullName>
                </value>
                <value>
                    <fullName>General Studies and Humanities</fullName>
                </value>
                <value>
                    <fullName>Health Professions</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Legal Professions and Studies</fullName>
                </value>
                <value>
                    <fullName>Mathematics and Statistics</fullName>
                </value>
                <value>
                    <fullName>Natural Resources and Conservation</fullName>
                </value>
                <value>
                    <fullName>Philosophy and Religious Studies</fullName>
                </value>
                <value>
                    <fullName>Physical Sciences</fullName>
                </value>
                <value>
                    <fullName>Psychology</fullName>
                </value>
                <value>
                    <fullName>Social Sciences</fullName>
                </value>
                <value>
                    <fullName>Visual and Performing Arts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Credentialing_Identifier__c</fullName>
        <description>An International Resource Identifier that uniquely identifies this credential.</description>
        <externalId>true</externalId>
        <inlineHelpText>An International Resource Identifier that uniquely identifies this credential.</inlineHelpText>
        <label>Credentialing Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>hed__All</fullName>
        <columns>NAME</columns>
        <columns>hed__Issuer__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>hed__Academic_Level__c</columns>
        <columns>hed__Field_Of_Study__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>hed__Degree</fullName>
        <active>true</active>
        <description>A certification related to the completion of a course of study.</description>
        <label>Degree</label>
    </recordTypes>
    <recordTypes>
        <fullName>hed__Diploma</fullName>
        <active>true</active>
        <description>A certification related to the completion of a course of study, such as a high school diploma in the United States.</description>
        <label>Diploma</label>
    </recordTypes>
    <recordTypes>
        <fullName>hed__Certificate</fullName>
        <active>true</active>
        <description>A certification related to the completion of specific courses.</description>
        <label>Certificate</label>
    </recordTypes>
</CustomObject>